# arduino-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  LICENSE  README.md  build.sh  upload.sh
boards/arduino_uno/: pins_arduino.h
boards/klst_panda/: variant.h
cmake/boards/: arduino_uno.cmake  klst_panda.cmake
cmake/boards/avr/: nano.cmake  uno.cmake
cmake/boards/stm32/: klst_panda.cmake
cmake/core/: ArduinoCore.cmake  avr_integration.cmake  klangstrom_integration.cmake  stm32_integration.cmake  vendor_dispatcher.cmake
cmake/cores/: arduino-avr.cmake  arduino-stm32.cmake  klangstrom.cmake
cmake/modules/: ArduinoLibrary.cmake  ArduinoProject.cmake
cmake/toolchains/: arm-none-eabi.cmake  avr-gcc.cmake
cmake/utils/: board-finder.cmake  vendor-paths.cmake
projects/test_nano/: CMakeLists.txt
projects/ws2812b_nano/: CMakeLists.txt
projects/ws2812b_nano/src/: main.cpp  ws2812b.cpp  ws2812b.h
projects/ws2812b_simple/: CMakeLists.txt  README.md
projects/ws2812b_simple/src/: main.cpp
src/: DrawLines.cpp
src-arduino/: main.cpp
templates/: CMakeLists.txt  README.md
templates/src/: main.cpp
